tests/baselines/reference/InterfaceDeclaration8.errors.txt
InterfaceDeclaration8.ts(1,11): error TS2427: Interface name cannot be 'string'.


==== InterfaceDeclaration8.ts (1 errors) ====
    interface string {
              ~~~~~~
!!! error TS2427: Interface name cannot be 'string'.
    }